# runlog

./: .dockerignore  .env.example  .env.running.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  STATUS.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: docker-publish.yml
app/: assistant.py  auth.py  coach.py  demo.py  garmin_import.py  garmin_sync.py  generator.py  main.py  models.py  push.py  seed_engine.py  stats.py  strava.py  util.py  weather.py
app/accounts/: auth.py  demo.py  seed_engine.py
app/coach/: assistant.py  core.py  generator.py  self_review.py
app/routes/: auth.py  chat.py  dashboard.py  goals.py  health.py  settings.py  sync.py  wellness.py  workouts.py
app/static/: app.js  index.html  style.css
app/sync/: garmin_import.py  garmin_sync.py  strava.py  weather.py
scripts/: requirements.txt  screenshot.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  sw.ts
web/src/hooks/: useChat.ts  useCountdown.ts  useDashboardSummary.ts  useDemoAuth.ts  useGoals.ts  useHrFloor.ts  useOnboardingGate.ts  usePush.ts  useRuns.ts  useSettings.ts  useSleepStages.ts  useSteps.ts  useTimezoneSync.ts  useWellness.ts  useWorkouts.ts
web/src/lib/: api.ts  beep.ts  chartTheme.ts  chatMarkdown.ts  clipboard.ts  color.ts  dates.ts  demoAuth.ts  format.ts  (+9 more)
(+46 files in other folders)
